# scraping_integrated_report_in_japan

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
data/converted/: 2018_survey.csv
data/pdf/: convert.sh  url.md
