[tool.poetry]
name = "scraping_integrated_report_in_japan"
version = "0.1.0"
description = ""
authors = ["ktman-ktman <ktym.disk.mobile.note@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
"pdfminer.six" = "^20220524"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
